Final work commit no.3

--- a/style/styles.css
+++ b/style/styles.css
@@ -3,7 +3,9 @@
 * {
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
+
 
 #hero {
     height: 695px;
@@ -13,6 +15,25 @@
     background-position: center;
     display: flex;
     justify-content: center;
+}
+
+.nav-bar{
+    position: absolute;
+    color: aliceblue;
+    font-size: 30px;
+    font-family: Nanum Brush Script;
+    margin-top: 20px;
+    margin-left: 20px;
+    
+}
+
+.single-nav{
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.single-nav:hover{
+    opacity: 0.7;
 }
 
 #hero .hero-box {
